--- a/.github/worflows/dhubecr.yaml
+++ b/.github/worflows/dhubecr.yaml
@@ -27,5 +27,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: ./dockerfile
           push: true
           tags: kdua1/app:latest
