--- a/.github/workflows/dhubecr.yaml
+++ b/.github/workflows/dhubecr.yaml
@@ -1,7 +1,6 @@
-name: Docker build and push
+name: Docker build & push
 
-on:
-  push:
+on: push
 
 jobs:
   docker:
@@ -27,6 +26,5 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./dockerfile
           push: true
-          tags: kdua1/app:latest
+          tags: kdua1/berto-image:latest
