--- a/.github/workflows/dhubecr.yaml
+++ b/.github/workflows/dhubecr.yaml
@@ -49,5 +49,5 @@ jobs:
           ECR_REPOSITORY: ${{ secrets.REPO_NAME }}  # ecr-aws-repo
           IMAGE_TAG: latest
         run: |
-            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            docker build -t $ECR_REGISTRY.dkr.ecr.us-east-1.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG .
+            docker push $ECR_REGISTRY.dkr.ecr.us-east-1.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
